# octeon_toolchain-4.1

./: Makefile
glibc/: ChangeLog  Makeconfig
glibc/bits/: libc-tsd.h
glibc/elf/: Makefile  ldd.bash.in
glibc/locale/: global-locale.c
glibc/mach/: err_boot.sub  err_ipc.sub  err_mach.sub
glibc/nptl/: pthread_mutex_consistent.c
glibc/ports/: ChangeLog.mips  README
glibc/stdlib/: test-canon.c
src/bfd/: ChangeLog  Makefile.am  Makefile.in  archures.c  bfd-in2.h  config.bfd  cpu-mips.c  elf64-mips.c  elfn32-mips.c  elfxx-mips.c  opncls.c
src/binutils/: arlex.c  deflex.c  rclex.c  readelf.c  syslex.c
src/ddd/: AUTHORS  CREDITS  INSTALL  Makefile.am  Makefile.in  NEWS  PROBLEMS  TIPS  TODO  acinclude.m4  aclocal.m4  configure  configure.ac  ddd-3.3.11-1.spec  ddd.spec.in
src/gas/: config.in  configure  configure.in  itbl-lex.c
src/gcc/: ChangeLog  c-typeck.c  cfgloopanal.c  combine.c  config.gcc  crtstuff.c  fold-const.c  gcc.c  rtl.h  rtlanal.c  rtlhooks.c  simplify-rtx.c  target-def.h  target.h  targhooks.c  targhooks.h  tree-pretty-print.c  tree-ssa-loop-ivopts.c  unwind-dw2-fde-glibc.c  version.c
src/gdb/: ChangeLog  Makefile.in  (+17 more)
src/newlib/libc/machine/octeon/: Makefile.am  Makefile.in  configure  configure.in  memcpy.c  memset.c  strcmp.c  strlen.c
src/newlib/libc/sys/octeon/: Makefile.am  Makefile.in  configure  configure.in  crt0.S  octeon-app-init.c  octeon-app-init.h  octeon-cvmx.h  octeon-os.c  octeon-uart.c  octeon-uart.h
src/newlib/libc/sys/octeon/bits/: endian.h
src/newlib/libc/sys/octeon/include/: endian.h
uclibc/: octeon.config
(+823 files in other folders)
